# inflearn-fine-tunning

./: .gitignore  12_bert.ipynb  12_bert.py  12_bert_mlx.ipynb  12_bert_optimized.py  README.md  compare_models.py  main.py  mps_utils.py  performance_comparison.py  pyproject.toml  test_mps_utils.py  use_saved_model.py
