[project]
name = "inflearn-fine-tunning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "mlx>=0.29.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
